--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,4 +17,4 @@ jobs:
             go-version: '1.20'
 
         - name: Publish
-          run: GOPROXY=proxy.golang.org go list -m github.com/${github.repository}@${GITHUB_REF#refs/*/}
+          run: GOPROXY=proxy.golang.org go list -m github.com/${{ github.repository }}@${{ github.ref_name }}
