--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,6 +7,7 @@ on:
       - 'v*.*.*'
 jobs:
     publish:
+        name: Publish
         runs-on: ubuntu-latest
         steps:
         - uses: actions/checkout@v4
