--- a/.editorconfig
+++ b/.editorconfig
@@ -13,7 +13,7 @@ ij_formatter_off_tag = @formatter:off
 ij_formatter_on_tag = @formatter:on
 ij_formatter_tags_enabled = true
 ij_smart_tabs = true
-ij_visual_guides = 
+ij_visual_guides =
 ij_wrap_on_typing = false
 
 [.editorconfig]
@@ -38,7 +38,7 @@ indent_style = tab
 tab_width = 4
 ij_continuation_indent_size = 4
 ij_smart_tabs = false
-ij_visual_guides = 78,128
+ij_visual_guides = 78, 128
 ij_go_GROUP_CURRENT_PROJECT_IMPORTS = false
 ij_go_add_leading_space_to_comments = false
 ij_go_add_parentheses_for_single_import = false
@@ -50,7 +50,7 @@ ij_go_group_stdlib_imports = false
 ij_go_import_sorting = gofmt
 ij_go_keep_indents_on_empty_lines = false
 ij_go_local_group_mode = project
-ij_go_local_package_prefixes = 
+ij_go_local_package_prefixes =
 ij_go_move_all_imports_in_one_declaration = false
 ij_go_move_all_stdlib_imports_in_one_group = false
 ij_go_remove_redundant_import_aliases = false
